[gd_scene load_steps=4 format=3 uid="uid://di23kbvph1cl8"]

[ext_resource type="Texture2D" uid="uid://dn45nn7ydljfa" path="res://Textures/bigger_bullets.png" id="1_l3odb"]
[ext_resource type="Script" uid="uid://cc88mpt6fncs6" path="res://Game/intermission/texture_button.gd" id="2_prj2c"]

[sub_resource type="Theme" id="Theme_l3odb"]
TooltipLabel/font_sizes/font_size = 30

[node name="TextureButton" type="TextureButton"]
custom_minimum_size = Vector2(200, 200)
theme = SubResource("Theme_l3odb")
texture_normal = ExtResource("1_l3odb")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_prj2c")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
